Página inicial - front end

--- a/V1/codigo/index.html
+++ b/V1/codigo/index.html
@@ -16,38 +16,38 @@
 
   <!-- HEADER -->
   <header class="header">
-    <nav class="nav container">
-      <div class="logo">
-        <!-- Logo ou símbolo -->
-        <span>EnglishFY</span>
-      </div>
+  <nav class="nav container">
+    <div class="logo">
+      <img src="assets/images/logo.png" alt="EnglishFY logo" />
+      <span>EnglishFY</span>
+    </div>
 
-      <ul class="nav-menu">
-        <li><a href="pages/materias.html">Matérias</a></li>
-        <li><a href="pages/quiz.html">Teste seu nível</a></li>
-        <li><a href="pages/alunos.html">Alunos</a></li>
-        <li><a href="pages/contato.html">Contato</a></li>
-      </ul>
-    </nav>
-  </header>
+    <ul class="nav-menu">
+      <li><a href="pages/materias.html" class="nav-glass pink">Matérias</a></li>
+      <li><a href="pages/quiz.html" class="nav-glass blue">Teste nível</a></li>
+      <li><a href="pages/alunos.html" class="nav-glass yellow">Alunos</a></li>
+      <li><a href="pages/contato.html" class="nav-glass pink">Contato</a></li>
+    </ul>
+  </nav>
+</header>
+
 
   <!-- MAIN -->
   <main>
 
     <!-- HERO SECTION -->
     <section class="hero container">
-      <h1>Learn English in a simple and organized way</h1>
+      <h1>English is for everybody. Especially for you.</h1>
       <p>
-        EnglishFY helps you understand where to start and how to study English
-        with clear content and practice.
+        O EnglishFY ajuda você a entender por onde começar e como estudar inglês, com conteúdos claros, organizados e práticos para aprender de forma leve e eficiente.
       </p>
 
       <div class="hero-actions">
         <a href="pages/quiz.html" class="btn btn-primary">
-          Discover where to start
+          Descubra por onde começar
         </a>
         <a href="pages/materias.html" class="btn btn-secondary">
-          Explore subjects
+          Explore as matérias
         </a>
       </div>
     </section>
@@ -57,15 +57,16 @@
       <div class="about-card">
         <div class="about-image">
           <!-- Sua foto -->
-          <img src="assets/images/profile.jpg" alt="EnglishFY creator" />
+          <img src="assets/images/profile.png" alt="EnglishFY creator" />
         </div>
 
         <div class="about-content">
-          <h2>About EnglishFY</h2>
+          <h2>EnglishFY Creator</h2>
           <p>
-            EnglishFY is a support platform created to help children and teenagers
-            learn English in a clear and accessible way.
+            Hi! My name is Camila Menezes. I’m an English teacher and a Computer Science student, and I created EnglishFY to merge my two passions.
           </p>
+
+          <br>
 
           <a href="pages/contato.html" class="btn btn-primary">
             Discover more
@@ -76,28 +77,26 @@
 
     <!-- FEATURED CONTENT -->
     <section class="featured container">
-      <h2>Featured content</h2>
+  <h2>Featured content</h2>
 
-      <div class="featured-grid">
-        <!-- Card 1 -->
-        <div class="content-card">
-          <h3>Vocabulary</h3>
-          <p>Learn essential words used in everyday situations.</p>
-        </div>
+  <div class="featured-grid">
+    <div class="content-card primary">
+      <h3>Vocabulary</h3>
+      <p>Learn essential words used in everyday situations.</p>
+    </div>
 
-        <!-- Card 2 -->
-        <div class="content-card">
-          <h3>Grammar</h3>
-          <p>Understand how English sentences are built.</p>
-        </div>
+    <div class="content-card secondary">
+      <h3>Grammar</h3>
+      <p>Understand how English sentences are built.</p>
+    </div>
 
-        <!-- Card 3 -->
-        <div class="content-card">
-          <h3>Listening</h3>
-          <p>Improve your understanding of spoken English.</p>
-        </div>
-      </div>
-    </section>
+    <div class="content-card tertiary">
+      <h3>Listening</h3>
+      <p>Improve your understanding of spoken English.</p>
+    </div>
+  </div>
+</section>
+
 
   </main>
 
