Página de matérias - front end

--- a/V1/codigo/pages/submaterias.html
+++ b/V1/codigo/pages/submaterias.html
@@ -48,10 +48,13 @@
       <div class="subsubjects-grid">
 
         <!-- Food -->
-        <div class="content-card secondary">
-          <h3>Food</h3>
-          <span class="badge badge-progress">1 / 5</span>
-        </div>
+        <a href="conteudo.html" class="card-link">
+          <div class="content-card secondary">
+            <h3>Food</h3>
+            <span class="badge badge-progress">1 / 5</span>
+          </div>
+        </a>
+
 
         <!-- Animals -->
         <div class="content-card tertiary">
