--- a/V1/codigo/pages/conteudo.html
+++ b/V1/codigo/pages/conteudo.html
@@ -36,7 +36,19 @@
 
     <!-- CONTEXT -->
     <section class="content-context container">
+      <nav class="breadcrumb">
+        <a href="materias.html">Matérias</a>
+        <span>›</span>
+        <a href="submaterias.html">Vocabulary</a>
+        <span>›</span>
+        <span>Food</span>
+      </nav>
+
+      <br>
+
       <span class="badge badge-progress">Vocabulary • Food</span>
+      <br>
+      <br>
       <h1>Food Vocabulary</h1>
       <p>
         Nessa lição, você aprenderá diversos vocabulários relacionados a COMIDAS.
@@ -47,12 +59,13 @@
     <section class="lesson container">
       <h2>🍎 New Words</h2>
 
-      <ul class="word-list">
-        <li><strong>Apple</strong> – a fruit</li>
-        <li><strong>Bread</strong> – food made from flour</li>
-        <li><strong>Cheese</strong> – food made from milk</li>
-        <li><strong>Rice</strong> – a common food in many countries</li>
-      </ul>
+      <div class="word-grid">
+        <div class="word-card"><strong>Apple</strong><span>a fruit</span></div>
+        <div class="word-card"><strong>Bread</strong><span>food made from flour</span></div>
+        <div class="word-card"><strong>Cheese</strong><span>food made from milk</span></div>
+        <div class="word-card"><strong>Rice</strong><span>a common food in many countries</span></div>
+      </div>
+
 
       <!-- Video placeholder -->
       <div class="lesson-media">
@@ -81,8 +94,9 @@
         </div>
 
         <button type="submit" class="btn btn-primary">
-          Finish lesson
+          Marcar como concluído
         </button>
+
 
       </form>
     </section>
