Trabalhando no quiz...

--- a/V1/codigo/pages/quiz.html
+++ b/V1/codigo/pages/quiz.html
@@ -89,9 +89,10 @@
 
       </div>
 
-      <button class="btn btn-primary">
+      <button class="btn btn-primary" id="nextQuestionBtn">
         Próxima pergunta
       </button>
+
 
     </section>
 
@@ -104,16 +105,8 @@
     </div>
   </footer>
 
-  <script>
-  const startBtn = document.querySelector(".start-quiz-btn");
-  const introSection = document.querySelector(".quiz-intro");
-  const questionsSection = document.querySelector(".quiz-questions");
-
-  startBtn.addEventListener("click", () => {
-    introSection.classList.add("hidden");
-    questionsSection.classList.remove("hidden");
-  });
-</script>
+  <!--Lógica do quiz-->
+  <script src="../scripts/quiz.js"></script>
 
 
 </body>
